--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -5,7 +5,12 @@
     @extend %flex;
     justify-content: space-between;
     height: 100px;
-    padding: 30px;
+    @include mobile {
+      padding: 20px;
+    }
+    @include mobile-x {
+      padding: 30px;
+    }
 
     .nav-title {
 
@@ -14,14 +19,25 @@
     }
     .toggle-mode-button {
         border: none;
-        font-size: 15px;
+
         outline: none;
         cursor: pointer;
-        // width: 100px;
+        @include mobile {
+          font-size: 0.8rem;
+        }
+        @include mobile-x {
+          font-size: 15px;
+        }
         @extend %flex;
         justify-content: space-between;
         span {
-            padding: 5px;
+
+            @include mobile {
+              padding: 5px 3px 5px 0;
+            }
+            @include mobile-x {
+              padding: 4px;
+            }
         }
     }
 }
